tests/paczka2/big_fuzzy/69764816.err
Error in line 8: B4FBwCtH3 A456 37,5
Error in line 14: A456 S959 73,9
Error in line 10: hXwnBRL S80 35,6
Error in line 24: 1XoDtW A374 -2,9
Error in line 60: AdSA S959 14,0
Error in line 55: B4FBwCtH3 S959 82,4
Error in line 69: hXwnBRL A374 49,2
Error in line 79: 1XoDtW S959 39,3
Error in line 76: B4FBwCtH3 S80 36,4
Error in line 87: AdSA A374 24,5
Error in line 84: B4FBwCtH3 S959 5,3
Error in line 89: A456 A374 79,4
Error in line 100: zuRkDP A456 93,5
Error in line 104: AdSA A456 ,95,9
Error in line 103: Shs S80 27,2
Error in line 107: A456 A456 3,0
Error in line 101: zuRkDP S80 51,4
Error in line 108: A456 S959 22,6
Error in line 109: zuRkDP A374 92,9
Error in line 112: A456 S80 44,7
Error in line 114: zuRkDP S959 51,8
Error in line 102: AdSA A456 81,8
Error in line 106: Shs S959 74,4
Error in line 121: Shs A374 8,3
Error in line 127: B4FBwCtH3 S80 84,4
Error in line 128: B4FBwCtH3 A456 32,9
Error in line 119: AdSA S80 77,9
Error in line 136: Shs A374 13,3
Error in line 145: 1XoDtW S80 57,6
Error in line 161: B4FBwCtH3 S80 53,1
Error in line 168: B4FBwCtH3 S959 95,9
Error in line 166: A456 A374 62,3
Error in line 171: A456 S80 24,0
Error in line 186: Shs A374 121,4
Error in line 207: AdSA A456 36,4
Error in line 212: AdSA A374 97,6
Error in line 222: zuRkDP S959 78,3
Error in line 223: 1XoDtW A456 41,8
Error in line 200: hXwnBRL A374 66,5
Error in line 226: B4FBwCtH3 A374 83,0
Error in line 238: zuRkDP S80 85,5
Error in line 232: hXwnBRL S959 97,5
Error in line 243: hXwnBRL A374 42,4
Error in line 246: hXwnBRL A456 44,8
